# explorando-observabilidade

./: .gitignore  README.md  go.mod  go.sum  package-lock.json  pyproject.toml
.github/: dependabot.yml
dia1/: README.md  app.py  go.mod  go.sum  lançardado.go  main.go
dia2/: README.md  app.py  go.mod  go.sum  lançardados.go  main.go
dia3/: README.md  app.py  go.mod  go.sum  main.go
dia4/: README.md  app.py  go.mod  go.sum  main.go
dia5/: README.md  app.py  go.mod  go.sum  main.go
dia6/: README.md  app.py  go.mod  go.sum  main.go
dia7/: README.md  app.py  go.mod  go.sum  main.go
dia8/: README.md  app.py
