[project]
name = "explorando-observabilidade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi[standard]>=0.138.0",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-instrumentation-fastapi>=0.63b1",
    "opentelemetry-sdk>=1.41.1",
    "psutil>=6.1.0",
]
